--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,10 +6,10 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="format-detection" content="telephone=no">
-  <title>恋人古情树 By HAISNAP</title>
+  <title>我们的古情树情侣契约树</title>
   <link rel="stylesheet" href="https://hpi-hub.tos-cn-beijing.volces.com/haisnap/cdn/colorui.min.css">
-  <style>
-    * {
+  <style  lang="scss">
+    page,view,text,swiper,swiper-item,image,navigator{
       margin: 0;
       padding: 0;
       box-sizing: border-box;
@@ -18,7 +18,6 @@
     html, body {
       width: 100%;
       height: 100%;
-      font-family: 'Noto Sans SC', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'PingFang SC', 'Hiragino Sans GB', 'Microsoft YaHei', sans-serif;
       background: linear-gradient(135deg, #ffeef8 0%, #e8f5e9 100%);
       -webkit-font-smoothing: antialiased;
       -moz-osx-font-smoothing: grayscale;
